[tool.poetry]
name = "hass-wibeee"
version = "3.4.1"
description = "Wibeee (and Mirubee) energy monitor"
authors = ["Luis Miranda <cheery.key9586@fastmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"

packages = [
    { include = "wibeee", from = "custom_components" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
homeassistant = "2023.7.3"
xmltodict = "0.13.0"
lxml = ">=4.9.1,<6"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
aioresponses = "^0.7.6"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
